--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
 
     <!-- Navigation Bar -->
     <header>
-        <div class="logo"><a href="./index.html"><img class="logo_img" src="./assets/images/blessTransLogo.png" alt="Our Logo"></a></div>
+        <div class="logo"><a href="#hero_section"><img class="logo_img" src="./assets/images/blessTransLogo.png" alt="Our Logo"></a></div>
                 <ul class="main_nav">
-                    <li><a href="./index.html" class="active_nav">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#hero_section" class="active_nav">Home</a></li>
+                    <li><a href="#about_us">About</a></li>
+                    <li><a href="#service_section">Services</a></li>
+                    <li><a href="#contact_section">Contact</a></li>
                     <a href="malito:info@blesstrans.co.zw"><button class="quote_btn">Get A Quote</button></a>
                 </ul>
                 <!-- Off Screen Menu -->
                  <div class="offScreenMenu">
                     <ul>
-                        <li><a href="./index.html" class="active_nav_ham">Home</a></li>
+                        <li><a href="#" class="active_nav_ham">Home</a></li>
                         &nbsp;
-                        <li><a href="#">About Us</a></li>
+                        <li><a href="#about_us">About</a></li>
                         &nbsp;
-                        <li><a href="#">Services</a></li>
+                        <li><a href="#service_section">Services</a></li>
                         &nbsp;
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#contact_section">Contact</a></li>
                         &nbsp;
                         <a href="malito:info@blesstrans.co.zw"><button class="quote_btn_ham">Get A Quote</button></a>
                     </ul>
@@ -51,11 +51,11 @@
             <div class="overall_container hero_overall">
                 <p class="tag_line">Transportation Is Our <span>Game.</span></p>
                 <div class="hero_brief_container">
-                    <p class="hero_brief">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae facilis 
+                    <p class="hero_brief">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reandae facilis 
                         est voluptates rem a, unde laboriosam necessitatibus ex expedita molestiae accusantium in 
                         quos fugiat repudiandae exercitationem omnis libero accusamus voluptatem.</p>
                 </div>
-                <button onclick="window.location.href='about.html'" class="hero_btn">Learn More</button>
+                <button onclick="window.location.href='#about_us'" class="hero_btn">Learn More</button>
             </div>
         </div>
      </section>
@@ -70,8 +70,6 @@
                         <p class="about_section_par">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             Labore, impedit repudiandae corporis possimus ad dolorum et eaque sunt neque ipsam 
                             delectus aliquid vitae accusamus accusantium quae illo quod temporibus quibusdam?</p>
-
-                        <button onclick="window.location.href='about.html'" class="about_btn">About Us</button>
                     </div>
                     <div class="about_images_flex_container">
                         <div class="about_images_container">
@@ -88,17 +86,43 @@
        <section id="service_section">
             <div class="overall_services_container">
                 <div class="overall_container">
+                    <p class="services_head overall_head">Our Services</p>
                     <div class="services_grid_container">
-                        <div class="services_images">
-                            <img src="./assets/images/img2.png" alt="" class="services_img">
-                            <p>A Pic on a shipping base</p>
+                        <div class="service service_1">
+                            <div class="hidden_content_1">
+                                <p class="hidden_head">Local</p>
+                                <p class="description">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                        Provident natus accusantium voluptates eius quam?
+                                        Minima non et harum nisi, quo qui dolorum, reiciendis
+                                        repudiandae beatae neque doloribus sequi dolore? At?
+                                </p>
+                                <a href="malito:info@blesstrans.co.zw"><button class="services_btn">Learn More</button></a>
+                                </div>
                         </div>
-                        <div class="services_content">
-                            <p class="services_section_head overall_head">Our Services</p>
-                            <p class="services_content_par">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Praesentium corporis assumenda inventore modi quas eveniet ipsam in, reiciendis
-                                accusamus ratione minus cumque laborum dicta sapiente sequi soluta animi, vel officiis?</p>
-                            <button onclick="window.location.href='about.html'" class="services_btn">About Us</button>
+                        <div class="service service_2">
+                            <div class="hidden_content_2">
+                                <p class="hidden_head">Cross Country</p>
+                                <p class="description">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Provident natus accusantium voluptates eius quam?
+                                    Minima non et harum nisi, quo qui dolorum, reiciendis
+                                    repudiandae beatae neque doloribus sequi dolore? At?
+                                </p>
+                                <a href="malito:info@blesstrans.co.zw"><button class="services_btn">Learn More</button></a>
+                            </div>
+                        </div>
+                        <div class="service service_3">
+                            <div class="hidden_content_3">
+                                <p class="hidden_head">International</p>
+                                <p class="description">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Provident natus accusantium voluptates eius quam?
+                                    Minima non et harum nisi, quo qui dolorum, reiciendis
+                                    repudiandae beatae neque doloribus sequi dolore? At?
+                                </p>
+                                <a href="malito:info@blesstrans.co.zw"><button class="services_btn">Learn More</button></a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -111,8 +135,8 @@
                 <div class="overall_container">
                     <p class="call_to_action_par">You want to transport your goods, <br> <span class="transportation">Transportation</span>
                          is our <span class="game">Game!</span></p>
-
-                    <button onclick="window.location.href='about.html'" class="call_to_action_btn">Contact Us</button>
+                        
+                         <a href="malito:info@blesstrans.co.zw"><button class="call_to_action_btn">Contact Us</button></a>
                 </div>
             </div>
         </section>
@@ -131,7 +155,7 @@
                             <p class="phone_number" data-aos="fade-right" data-aos-duration="2500"><i class="fa-solid fa-phone"></i> +(27) 74 506 9260</p>
                             <div class="location_container">
                                 <i class="fa-solid fa-location-dot"></i>
-                                <p class="contact_location" data-aos="fade-right" data-aos-duration="2500">7722 Southlands Park, Harare, Zimbabwe <br>123 Abcdef, SA</p>
+                                <p class="contact_location" data-aos="fade-right" data-aos-duration="2500">5928 Imperial reserve Mafikeng 2745 R.S.A</p>
                             </div>
                         </div>
                     </div>
@@ -162,17 +186,17 @@
                     <div class="footer_services_container">
                         <p class="footer_heads">Our Services</p>
                         <div class="services_links links_containers">
-                            <a href="">Local </a>
-                            <a href="">Cross Country</a>
-                            <a href="">International </a>
+                            <a href="#service_section">Local </a>
+                            <a href="#service_section">Cross Country</a>
+                            <a href="#service_section">International </a>
                         </div>
                     </div>
                     <div class="footer_links">
                         <p class="footer_heads">Quick Links</p>
                         <div class="quick_links links_containers">
-                            <a href="">About Us</a>
-                            <a href="">Our Services</a>
-                            <a href="">Contact Us</a>
+                            <a href="#about_us">About Us</a>
+                            <a href="#service_section">Our Services</a>
+                            <a href="#contact_section">Contact Us</a>
                         </div>
                     </div>
                     <div class="footer_contact_info">
